# starting-ragchatbot-codebase

./: CLAUDE.md  pyproject.toml  query-flow-diagram.md
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_app.py  test_course_search_tool.py  test_rag_system.py  test_static_files.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality-check.sh
